# Oclaw

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  index.html  package.json  skills-lock.json  tsconfig.tsbuildinfo
.agent/: AGENTS.md
.agents/: AGENTS.md
.claude/: settings.local.json
.claude/commands/: skill-add.md  skill-read.md  skill-sync.md
.cursor/rules/: claw-browser.mdc  oclaw.mdc
.github/workflows/: release.yml
docs/: OPENCLAW_DESKTOP_PLAN.md  OPENCLAW_INTEGRATION.md
memory/: MEMORY.md
openclaw-skill/: SKILL.md  bridge.ts  xhs.md
scripts/: download-fnm.sh
src/: App.vue  auto-imports.d.ts  components.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app.rs  bridge.js  config.rs  configure.rs  flows.rs  gateway.rs  installer.rs  lib.rs  main.rs  openclaw.rs  openclaw_http.rs  openclaw_process.rs  profile.rs  sidecar.rs  skills.rs  stealth.js  xhs.js  xhs.rs
src-tauri/src/webview/: commands.rs  mod.rs  rect.rs
src/api/: app.ts  flows.ts  gateway.ts  installer.ts  onboard.ts  openclaw.ts  profile.ts  sidecar.ts  skills.ts  webview.ts
src/components/: AIConsole.vue  AgentAddWizard.vue  FlowExecutionCard.vue  OnboardWizardOverlay.vue  OpenclawPage.vue  SettingsPage.vue  SetupPage.vue  SkillsPage.vue  TabBar.vue
src/composables/: useRunFlow.ts  useUrlInput.ts
src/layouts/: default.vue
src/pages/: index.vue
src/stores/: app.ts  flows.ts  installer.ts  onboard.ts  openclaw.ts  profile.ts  recording.ts  settings.ts  tabs.ts
src/styles/: main.css
(+8 files in other folders)
