[package]
name = "claw-browser"
version = "0.1.0"
description = "Claw Browser - Tauri backend (browser for OpenClaw)"
authors = ["you"]
edition = "2021"

[lib]
name = "claw_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
base64 = "0.22"
